# ai-robotics

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/robots/: turtlebot3.yaml
config/runtime/: default.yaml  logging_schema.json
config/sim/: gazebo.yaml  gazebo_demo.json
data/runs/: gazebo-demo-smoke.jsonl
design/: TECHNICAL_DESIGN.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  DATASET_SCHEMA.md  PROJECT_VISION.md  SECURITY.md
scripts/: dev.sh  generate_sample_log.py  run_gazebo_demo.py
src/ai_robotics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ai_robotics_core/: __init__.py  adapters.py  data_model.py  logging.py  runtime.py  safety.py
src/ai_robotics_robotics/: __init__.py  base.py
src/ai_robotics_sim/: __init__.py  base.py  gazebo_demo.py
tests/: test_imports.py  test_runtime_smoke.py
